# helm

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  HELMOPS Rebirth Roadmap  LICENSE  PLAN.md  PRD.md  PROJECT_PROMISE.md  README.md  ROADMAP.md  TRD.md  install.sh  roadmap.md
.github/workflows/: release.yml
.planning/: INGEST-CONFLICTS.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/intel/: SYNTHESIS.md  constraints.md  context.md  decisions.md  requirements.md
.planning/intel/classifications/: PROJECT_PROMISE.json  README-cfa64bcc.json  ROADMAP.json  agent-on-remote-0f4c8e5b.json  data-boundary.json  detector-review-checklist-8c3d7f2e.json  linked-purring-hearth.json  providers.json  release-notes-v1.0-d1b82b5f.json  threat-model-5f4c4c98.json  troubleshooting-c8d29f1a.json  trust-ladder-a1b2c3d4.json
.planning/phases/03-m3-fleet-multi-host/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  03-CONTEXT.md  03-PATTERNS.md
.planning/phases/04-m4-kubernetes-vm-compose/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-05-PLAN.md  04-05-SUMMARY.md  04-CONTEXT.md  04-PATTERNS.md
.planning/phases/05-m5-alerting/: 05-01-PLAN.md  05-02-PLAN.md  05-03-PLAN.md  05-04-PLAN.md  05-05-PLAN.md  05-SUMMARY.md
.planning/phases/06-m6-ai-excellence/: 06-SUMMARY.md  PLAN.md
crates/helm-agent/: Cargo.toml
crates/helm-agent/src/: budget.rs  cancel.rs  context_window.rs  evidence.rs  lib.rs  model_router.rs  parser.rs  plan_cache.rs  react.rs  supervisor.rs
crates/helm-core/: Cargo.toml
crates/helm-core/src/: capability.rs  error.rs  lib.rs  message.rs  redaction.rs  secret.rs  taint.rs  validation.rs
crates/helm-memory/: Cargo.toml
crates/helm-memory/migrations/: 0001_init.sql  0002_model_capability_warning.sql  0003_v3_corrections.sql  0004_security.sql  0005_remote_audit.sql  0006_snapshots.sql  0007_findings.sql  0008_changesets.sql  0009_finding_state.sql  0010_dashboard_plans.sql  0011_host_id_snapshots.sql
crates/helm-memory/src/: changesets.rs  episodes.rs  finding_state.rs  formal_skill.rs  graph.rs  lib.rs  merge_episodes.rs  procedures.rs  sessions.rs  skill_learner.rs  skills.rs  snapshots.rs  user_profile.rs
crates/helm-monitor/: Cargo.toml
crates/helm-monitor/src/: engine.rs  execute.rs  findings.rs  lib.rs  reporter.rs  snapshot.rs  troubleshoot.rs
crates/helm-monitor/src/alerting/: config.rs  mod.rs  pagerduty.rs  payload.rs  slack.rs  webhook.rs
crates/helm-monitor/src/collectors/: backups.rs  compose.rs  containers.rs  disks.rs  firewall.rs  host.rs  kubernetes.rs  libvirt.rs  load.rs  logs.rs  mod.rs  network.rs  packages.rs  ports.rs  processes.rs  services.rs  timers.rs
crates/helm-monitor/src/detectors/: backup_schedule.rs  backup_stale.rs  compose_health.rs  container_restart.rs  disk_usage.rs  domain_state.rs  exposed_port.rs  failed_services.rs  fs_readonly.rs  high_load.rs  inactive_service.rs  inode_usage.rs  journal_errors.rs  memory_pressure.rs  mod.rs  oom_event.rs  oom_kill.rs  package_updates.rs  pod_restart.rs  pvc_pressure.rs  restart_loop.rs  restore_test.rs  smart.rs  snapshot_age.rs  swap_exhaustion.rs  unhealthy_container.rs
crates/helm-providers/: Cargo.toml
crates/helm-providers/src/: anthropic.rs  gemini.rs  lib.rs  mock.rs  ollama.rs  openai_compat.rs  pricing.rs  provider.rs  quirks.rs
crates/helm-tools/: Cargo.toml
crates/helm-tools/src/: browser.rs  command.rs  disk.rs  fs_read.rs  fs_write.rs  git.rs  http.rs  ignore.rs  lib.rs  logs.rs  mcp.rs  network.rs  package.rs  process.rs  registry.rs  search.rs  service.rs  shell.rs  skill_tool.rs  ssh.rs  tool.rs  validator.rs
docs/: agent-on-remote.md  data-boundary.md  detector-review-checklist.md  helmops_tui_dashboard.html  providers.md  release-notes-v1.0.md  threat-model.md  troubleshooting.md  trust-ladder.md
helm-cli/: Cargo.toml
helm-cli/src/: agent_remote.rs  attach_tui.rs  bootstrap.rs  custom_commands.rs  hooks.rs  keybindings.rs  main.rs  ndjson_sink.rs  paths.rs  remote.rs  sandbox.rs  secrets.rs  serve.rs  snapshot_sink.rs  telemetry.rs  tui.rs
helm-cli/src/builtin_skills/: mod.rs
helm-cli/src/builtin_skills/docker-restart/: SKILL.md  skill.toml
helm-cli/src/builtin_skills/git-status/: SKILL.md  skill.toml
helm-cli/src/builtin_skills/nginx-deploy/: SKILL.md  skill.toml
src/: lib.rs
tests/: browser_prompt_injection.rs  e2e_react.rs  groq_hardened_loop.rs  groq_live.rs  groq_shell_composition.rs  ollama_live.rs  provider_matrix_live.rs  reliability_suites.rs  v17_snapshot.rs  v18_monitor.rs  v19_troubleshoot.rs  v20_controlled_execution.rs
