[package]
name = "helm-agent"
version = "1.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
helm-core.workspace = true
helm-memory.workspace = true
helm-providers.workspace = true
helm-tools.workspace = true
rusqlite.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
tracing.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio-test.workspace = true
tracing-subscriber.workspace = true
