[package]
name = "helm-memory"
version = "1.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono.workspace = true
helm-core.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
thiserror.workspace = true
sha2 = "0.10"

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
tokio-test.workspace = true
