[package]
name = "helm-monitor"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Monitoring engine for HELM — typed system snapshots and collectors"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
futures.workspace = true
helm-core.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
