[package]
name = "helm-tools"
version = "0.1.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
jsonschema.workspace = true
helm-core.workspace = true
helm-providers.workspace = true
reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
tokio-test.workspace = true
