[package]
name = "helm-tools"
version = "1.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
jsonschema.workspace = true
helm-core.workspace = true
helm-providers.workspace = true
reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
regex.workspace = true
ignore.workspace = true
globset.workspace = true
url.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
dirs.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
tokio-test.workspace = true
